// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`JSON envelope structure snapshots status --json success envelope shape 1`] = `
{
  "accountFiles": "array(0)",
  "aspHost": "null",
  "configDir": "null",
  "configExists": "boolean",
  "defaultChain": "null",
  "entrypoint": "null",
  "nextActions": "array(1)",
  "readyForDeposit": "boolean",
  "readyForUnsigned": "boolean",
  "readyForWithdraw": "boolean",
  "recoveryPhraseSet": "boolean",
  "rpcIsCustom": "boolean",
  "rpcUrl": "null",
  "schemaVersion": "string",
  "selectedChain": "null",
  "signerAddress": "null",
  "signerKeySet": "boolean",
  "signerKeyValid": "boolean",
  "success": "boolean",
}
`;

exports[`JSON envelope structure snapshots status --json (initialized) success envelope shape 1`] = `
{
  "accountFiles": "array(0)",
  "aspHost": "string",
  "aspLive": "boolean",
  "configDir": "string",
  "configExists": "boolean",
  "defaultChain": "string",
  "entrypoint": "string",
  "nextActions": "array(1)",
  "readyForDeposit": "boolean",
  "readyForUnsigned": "boolean",
  "readyForWithdraw": "boolean",
  "recoveryPhraseSet": "boolean",
  "rpcIsCustom": "boolean",
  "rpcLive": "boolean",
  "rpcUrl": "string",
  "schemaVersion": "string",
  "selectedChain": "string",
  "signerAddress": "string",
  "signerKeySet": "boolean",
  "signerKeyValid": "boolean",
  "success": "boolean",
}
`;

exports[`JSON envelope structure snapshots capabilities --json success envelope shape 1`] = `
{
  "agentNotes.firstRun": "string",
  "agentNotes.metaFlag": "string",
  "agentNotes.polling": "string",
  "agentNotes.statusCheck": "string",
  "agentNotes.unsignedMode": "string",
  "agentNotes.withdrawQuote": "string",
  "agentWorkflow": "array(6)",
  "commandDetails.accounts.agentWorkflowNotes": "array(3)",
  "commandDetails.accounts.aliases": "array(0)",
  "commandDetails.accounts.command": "string",
  "commandDetails.accounts.description": "string",
  "commandDetails.accounts.examples": "array(7)",
  "commandDetails.accounts.expectedLatencyClass": "string",
  "commandDetails.accounts.flags": "array(5)",
  "commandDetails.accounts.globalFlags": "array(11)",
  "commandDetails.accounts.jsonFields": "string",
  "commandDetails.accounts.jsonVariants": "array(2)",
  "commandDetails.accounts.prerequisites": "array(1)",
  "commandDetails.accounts.requiresInit": "boolean",
  "commandDetails.accounts.safeReadOnly": "boolean",
  "commandDetails.accounts.safetyNotes": "array(0)",
  "commandDetails.accounts.supportsDryRun": "boolean",
  "commandDetails.accounts.supportsUnsigned": "boolean",
  "commandDetails.accounts.usage": "string",
  "commandDetails.activity.agentWorkflowNotes": "array(0)",
  "commandDetails.activity.aliases": "array(0)",
  "commandDetails.activity.command": "string",
  "commandDetails.activity.description": "string",
  "commandDetails.activity.examples": "array(4)",
  "commandDetails.activity.expectedLatencyClass": "string",
  "commandDetails.activity.flags": "array(3)",
  "commandDetails.activity.globalFlags": "array(11)",
  "commandDetails.activity.jsonFields": "string",
  "commandDetails.activity.jsonVariants": "array(0)",
  "commandDetails.activity.prerequisites": "array(0)",
  "commandDetails.activity.requiresInit": "boolean",
  "commandDetails.activity.safeReadOnly": "boolean",
  "commandDetails.activity.safetyNotes": "array(0)",
  "commandDetails.activity.supportsDryRun": "boolean",
  "commandDetails.activity.supportsUnsigned": "boolean",
  "commandDetails.activity.usage": "string",
  "commandDetails.capabilities.agentWorkflowNotes": "array(0)",
  "commandDetails.capabilities.aliases": "array(0)",
  "commandDetails.capabilities.command": "string",
  "commandDetails.capabilities.description": "string",
  "commandDetails.capabilities.examples": "array(2)",
  "commandDetails.capabilities.expectedLatencyClass": "string",
  "commandDetails.capabilities.flags": "array(0)",
  "commandDetails.capabilities.globalFlags": "array(11)",
  "commandDetails.capabilities.jsonFields": "string",
  "commandDetails.capabilities.jsonVariants": "array(0)",
  "commandDetails.capabilities.prerequisites": "array(0)",
  "commandDetails.capabilities.requiresInit": "boolean",
  "commandDetails.capabilities.safeReadOnly": "boolean",
  "commandDetails.capabilities.safetyNotes": "array(0)",
  "commandDetails.capabilities.supportsDryRun": "boolean",
  "commandDetails.capabilities.supportsUnsigned": "boolean",
  "commandDetails.capabilities.usage": "string",
  "commandDetails.completion.agentWorkflowNotes": "array(0)",
  "commandDetails.completion.aliases": "array(0)",
  "commandDetails.completion.command": "string",
  "commandDetails.completion.description": "string",
  "commandDetails.completion.examples": "array(3)",
  "commandDetails.completion.expectedLatencyClass": "string",
  "commandDetails.completion.flags": "array(2)",
  "commandDetails.completion.globalFlags": "array(11)",
  "commandDetails.completion.jsonFields": "string",
  "commandDetails.completion.jsonVariants": "array(0)",
  "commandDetails.completion.prerequisites": "array(0)",
  "commandDetails.completion.requiresInit": "boolean",
  "commandDetails.completion.safeReadOnly": "boolean",
  "commandDetails.completion.safetyNotes": "array(0)",
  "commandDetails.completion.supportsDryRun": "boolean",
  "commandDetails.completion.supportsUnsigned": "boolean",
  "commandDetails.completion.usage": "string",
  "commandDetails.deposit.agentWorkflowNotes": "array(1)",
  "commandDetails.deposit.aliases": "array(0)",
  "commandDetails.deposit.command": "string",
  "commandDetails.deposit.description": "string",
  "commandDetails.deposit.examples": "array(6)",
  "commandDetails.deposit.expectedLatencyClass": "string",
  "commandDetails.deposit.flags": "array(4)",
  "commandDetails.deposit.globalFlags": "array(11)",
  "commandDetails.deposit.jsonFields": "string",
  "commandDetails.deposit.jsonVariants": "array(3)",
  "commandDetails.deposit.prerequisites": "array(1)",
  "commandDetails.deposit.requiresInit": "boolean",
  "commandDetails.deposit.safeReadOnly": "boolean",
  "commandDetails.deposit.safetyNotes": "array(3)",
  "commandDetails.deposit.supportsDryRun": "boolean",
  "commandDetails.deposit.supportsUnsigned": "boolean",
  "commandDetails.deposit.usage": "string",
  "commandDetails.describe.agentWorkflowNotes": "array(0)",
  "commandDetails.describe.aliases": "array(0)",
  "commandDetails.describe.command": "string",
  "commandDetails.describe.description": "string",
  "commandDetails.describe.examples": "array(3)",
  "commandDetails.describe.expectedLatencyClass": "string",
  "commandDetails.describe.flags": "array(1)",
  "commandDetails.describe.globalFlags": "array(11)",
  "commandDetails.describe.jsonFields": "string",
  "commandDetails.describe.jsonVariants": "array(0)",
  "commandDetails.describe.prerequisites": "array(0)",
  "commandDetails.describe.requiresInit": "boolean",
  "commandDetails.describe.safeReadOnly": "boolean",
  "commandDetails.describe.safetyNotes": "array(0)",
  "commandDetails.describe.supportsDryRun": "boolean",
  "commandDetails.describe.supportsUnsigned": "boolean",
  "commandDetails.describe.usage": "string",
  "commandDetails.guide.agentWorkflowNotes": "array(0)",
  "commandDetails.guide.aliases": "array(0)",
  "commandDetails.guide.command": "string",
  "commandDetails.guide.description": "string",
  "commandDetails.guide.examples": "array(0)",
  "commandDetails.guide.expectedLatencyClass": "string",
  "commandDetails.guide.flags": "array(0)",
  "commandDetails.guide.globalFlags": "array(11)",
  "commandDetails.guide.jsonFields": "null",
  "commandDetails.guide.jsonVariants": "array(0)",
  "commandDetails.guide.prerequisites": "array(0)",
  "commandDetails.guide.requiresInit": "boolean",
  "commandDetails.guide.safeReadOnly": "boolean",
  "commandDetails.guide.safetyNotes": "array(0)",
  "commandDetails.guide.supportsDryRun": "boolean",
  "commandDetails.guide.supportsUnsigned": "boolean",
  "commandDetails.guide.usage": "string",
  "commandDetails.history.agentWorkflowNotes": "array(0)",
  "commandDetails.history.aliases": "array(0)",
  "commandDetails.history.command": "string",
  "commandDetails.history.description": "string",
  "commandDetails.history.examples": "array(4)",
  "commandDetails.history.expectedLatencyClass": "string",
  "commandDetails.history.flags": "array(2)",
  "commandDetails.history.globalFlags": "array(11)",
  "commandDetails.history.jsonFields": "string",
  "commandDetails.history.jsonVariants": "array(0)",
  "commandDetails.history.prerequisites": "array(1)",
  "commandDetails.history.requiresInit": "boolean",
  "commandDetails.history.safeReadOnly": "boolean",
  "commandDetails.history.safetyNotes": "array(0)",
  "commandDetails.history.supportsDryRun": "boolean",
  "commandDetails.history.supportsUnsigned": "boolean",
  "commandDetails.history.usage": "string",
  "commandDetails.init.agentWorkflowNotes": "array(1)",
  "commandDetails.init.aliases": "array(0)",
  "commandDetails.init.command": "string",
  "commandDetails.init.description": "string",
  "commandDetails.init.examples": "array(6)",
  "commandDetails.init.expectedLatencyClass": "string",
  "commandDetails.init.flags": "array(9)",
  "commandDetails.init.globalFlags": "array(11)",
  "commandDetails.init.jsonFields": "string",
  "commandDetails.init.jsonVariants": "array(0)",
  "commandDetails.init.prerequisites": "array(0)",
  "commandDetails.init.requiresInit": "boolean",
  "commandDetails.init.safeReadOnly": "boolean",
  "commandDetails.init.safetyNotes": "array(1)",
  "commandDetails.init.supportsDryRun": "boolean",
  "commandDetails.init.supportsUnsigned": "boolean",
  "commandDetails.init.usage": "string",
  "commandDetails.pools.agentWorkflowNotes": "array(1)",
  "commandDetails.pools.aliases": "array(0)",
  "commandDetails.pools.command": "string",
  "commandDetails.pools.description": "string",
  "commandDetails.pools.examples": "array(6)",
  "commandDetails.pools.expectedLatencyClass": "string",
  "commandDetails.pools.flags": "array(3)",
  "commandDetails.pools.globalFlags": "array(11)",
  "commandDetails.pools.jsonFields": "string",
  "commandDetails.pools.jsonVariants": "array(0)",
  "commandDetails.pools.prerequisites": "array(0)",
  "commandDetails.pools.requiresInit": "boolean",
  "commandDetails.pools.safeReadOnly": "boolean",
  "commandDetails.pools.safetyNotes": "array(0)",
  "commandDetails.pools.supportsDryRun": "boolean",
  "commandDetails.pools.supportsUnsigned": "boolean",
  "commandDetails.pools.usage": "string",
  "commandDetails.ragequit.agentWorkflowNotes": "array(0)",
  "commandDetails.ragequit.aliases": "array(1)",
  "commandDetails.ragequit.command": "string",
  "commandDetails.ragequit.description": "string",
  "commandDetails.ragequit.examples": "array(4)",
  "commandDetails.ragequit.expectedLatencyClass": "string",
  "commandDetails.ragequit.flags": "array(4)",
  "commandDetails.ragequit.globalFlags": "array(11)",
  "commandDetails.ragequit.jsonFields": "string",
  "commandDetails.ragequit.jsonVariants": "array(3)",
  "commandDetails.ragequit.prerequisites": "array(1)",
  "commandDetails.ragequit.requiresInit": "boolean",
  "commandDetails.ragequit.safeReadOnly": "boolean",
  "commandDetails.ragequit.safetyNotes": "array(1)",
  "commandDetails.ragequit.supportsDryRun": "boolean",
  "commandDetails.ragequit.supportsUnsigned": "boolean",
  "commandDetails.ragequit.usage": "string",
  "commandDetails.stats global.agentWorkflowNotes": "array(0)",
  "commandDetails.stats global.aliases": "array(0)",
  "commandDetails.stats global.command": "string",
  "commandDetails.stats global.description": "string",
  "commandDetails.stats global.examples": "array(2)",
  "commandDetails.stats global.expectedLatencyClass": "string",
  "commandDetails.stats global.flags": "array(0)",
  "commandDetails.stats global.globalFlags": "array(11)",
  "commandDetails.stats global.jsonFields": "string",
  "commandDetails.stats global.jsonVariants": "array(0)",
  "commandDetails.stats global.prerequisites": "array(0)",
  "commandDetails.stats global.requiresInit": "boolean",
  "commandDetails.stats global.safeReadOnly": "boolean",
  "commandDetails.stats global.safetyNotes": "array(0)",
  "commandDetails.stats global.supportsDryRun": "boolean",
  "commandDetails.stats global.supportsUnsigned": "boolean",
  "commandDetails.stats global.usage": "string",
  "commandDetails.stats pool.agentWorkflowNotes": "array(0)",
  "commandDetails.stats pool.aliases": "array(0)",
  "commandDetails.stats pool.command": "string",
  "commandDetails.stats pool.description": "string",
  "commandDetails.stats pool.examples": "array(2)",
  "commandDetails.stats pool.expectedLatencyClass": "string",
  "commandDetails.stats pool.flags": "array(1)",
  "commandDetails.stats pool.globalFlags": "array(11)",
  "commandDetails.stats pool.jsonFields": "string",
  "commandDetails.stats pool.jsonVariants": "array(0)",
  "commandDetails.stats pool.prerequisites": "array(0)",
  "commandDetails.stats pool.requiresInit": "boolean",
  "commandDetails.stats pool.safeReadOnly": "boolean",
  "commandDetails.stats pool.safetyNotes": "array(0)",
  "commandDetails.stats pool.supportsDryRun": "boolean",
  "commandDetails.stats pool.supportsUnsigned": "boolean",
  "commandDetails.stats pool.usage": "string",
  "commandDetails.stats.agentWorkflowNotes": "array(0)",
  "commandDetails.stats.aliases": "array(0)",
  "commandDetails.stats.command": "string",
  "commandDetails.stats.description": "string",
  "commandDetails.stats.examples": "array(3)",
  "commandDetails.stats.expectedLatencyClass": "string",
  "commandDetails.stats.flags": "array(2)",
  "commandDetails.stats.globalFlags": "array(11)",
  "commandDetails.stats.jsonFields": "null",
  "commandDetails.stats.jsonVariants": "array(0)",
  "commandDetails.stats.prerequisites": "array(0)",
  "commandDetails.stats.requiresInit": "boolean",
  "commandDetails.stats.safeReadOnly": "boolean",
  "commandDetails.stats.safetyNotes": "array(0)",
  "commandDetails.stats.supportsDryRun": "boolean",
  "commandDetails.stats.supportsUnsigned": "boolean",
  "commandDetails.stats.usage": "string",
  "commandDetails.status.agentWorkflowNotes": "array(0)",
  "commandDetails.status.aliases": "array(0)",
  "commandDetails.status.command": "string",
  "commandDetails.status.description": "string",
  "commandDetails.status.examples": "array(5)",
  "commandDetails.status.expectedLatencyClass": "string",
  "commandDetails.status.flags": "array(4)",
  "commandDetails.status.globalFlags": "array(11)",
  "commandDetails.status.jsonFields": "string",
  "commandDetails.status.jsonVariants": "array(0)",
  "commandDetails.status.prerequisites": "array(0)",
  "commandDetails.status.requiresInit": "boolean",
  "commandDetails.status.safeReadOnly": "boolean",
  "commandDetails.status.safetyNotes": "array(0)",
  "commandDetails.status.supportsDryRun": "boolean",
  "commandDetails.status.supportsUnsigned": "boolean",
  "commandDetails.status.usage": "string",
  "commandDetails.sync.agentWorkflowNotes": "array(0)",
  "commandDetails.sync.aliases": "array(0)",
  "commandDetails.sync.command": "string",
  "commandDetails.sync.description": "string",
  "commandDetails.sync.examples": "array(3)",
  "commandDetails.sync.expectedLatencyClass": "string",
  "commandDetails.sync.flags": "array(1)",
  "commandDetails.sync.globalFlags": "array(11)",
  "commandDetails.sync.jsonFields": "string",
  "commandDetails.sync.jsonVariants": "array(0)",
  "commandDetails.sync.prerequisites": "array(1)",
  "commandDetails.sync.requiresInit": "boolean",
  "commandDetails.sync.safeReadOnly": "boolean",
  "commandDetails.sync.safetyNotes": "array(0)",
  "commandDetails.sync.supportsDryRun": "boolean",
  "commandDetails.sync.supportsUnsigned": "boolean",
  "commandDetails.sync.usage": "string",
  "commandDetails.withdraw quote.agentWorkflowNotes": "array(1)",
  "commandDetails.withdraw quote.aliases": "array(0)",
  "commandDetails.withdraw quote.command": "string",
  "commandDetails.withdraw quote.description": "string",
  "commandDetails.withdraw quote.examples": "array(2)",
  "commandDetails.withdraw quote.expectedLatencyClass": "string",
  "commandDetails.withdraw quote.flags": "array(2)",
  "commandDetails.withdraw quote.globalFlags": "array(11)",
  "commandDetails.withdraw quote.jsonFields": "string",
  "commandDetails.withdraw quote.jsonVariants": "array(0)",
  "commandDetails.withdraw quote.prerequisites": "array(1)",
  "commandDetails.withdraw quote.requiresInit": "boolean",
  "commandDetails.withdraw quote.safeReadOnly": "boolean",
  "commandDetails.withdraw quote.safetyNotes": "array(0)",
  "commandDetails.withdraw quote.supportsDryRun": "boolean",
  "commandDetails.withdraw quote.supportsUnsigned": "boolean",
  "commandDetails.withdraw quote.usage": "string",
  "commandDetails.withdraw.agentWorkflowNotes": "array(0)",
  "commandDetails.withdraw.aliases": "array(0)",
  "commandDetails.withdraw.command": "string",
  "commandDetails.withdraw.description": "string",
  "commandDetails.withdraw.examples": "array(7)",
  "commandDetails.withdraw.expectedLatencyClass": "string",
  "commandDetails.withdraw.flags": "array(9)",
  "commandDetails.withdraw.globalFlags": "array(11)",
  "commandDetails.withdraw.jsonFields": "string",
  "commandDetails.withdraw.jsonVariants": "array(5)",
  "commandDetails.withdraw.prerequisites": "array(1)",
  "commandDetails.withdraw.requiresInit": "boolean",
  "commandDetails.withdraw.safeReadOnly": "boolean",
  "commandDetails.withdraw.safetyNotes": "array(1)",
  "commandDetails.withdraw.supportsDryRun": "boolean",
  "commandDetails.withdraw.supportsUnsigned": "boolean",
  "commandDetails.withdraw.usage": "string",
  "commands": "array(18)",
  "documentation.agentGuide": "string",
  "documentation.changelog": "string",
  "documentation.reference": "string",
  "globalFlags": "array(11)",
  "jsonOutputContract": "string",
  "safeReadOnlyCommands": "array(10)",
  "schemaVersion": "string",
  "schemas.aspApprovalStatus.description": "string",
  "schemas.aspApprovalStatus.values": "array(3)",
  "schemas.errorCategories.description": "string",
  "schemas.errorCategories.exitCodes.ASP": "number",
  "schemas.errorCategories.exitCodes.CONTRACT": "number",
  "schemas.errorCategories.exitCodes.INPUT": "number",
  "schemas.errorCategories.exitCodes.PROOF": "number",
  "schemas.errorCategories.exitCodes.RELAYER": "number",
  "schemas.errorCategories.exitCodes.RPC": "number",
  "schemas.errorCategories.exitCodes.UNKNOWN": "number",
  "schemas.errorCategories.values": "array(7)",
  "schemas.nextActions.description": "string",
  "schemas.nextActions.shape": "string",
  "schemas.poolAccountStatus.description": "string",
  "schemas.poolAccountStatus.values": "array(3)",
  "schemas.unsignedOutput.envelopeFormat": "string",
  "schemas.unsignedOutput.note": "string",
  "schemas.unsignedOutput.txFormat": "string",
  "success": "boolean",
  "supportedChains": "array(5)",
}
`;

exports[`JSON envelope structure snapshots activity --json error envelope shape (ASP offline) 1`] = `
{
  "error.category": "string",
  "error.code": "string",
  "error.hint": "string",
  "error.message": "string",
  "error.retryable": "boolean",
  "errorCode": "string",
  "errorMessage": "string",
  "schemaVersion": "string",
  "success": "boolean",
}
`;

exports[`JSON envelope structure snapshots stats --json error envelope shape (ASP offline) 1`] = `
{
  "error.category": "string",
  "error.code": "string",
  "error.hint": "string",
  "error.message": "string",
  "error.retryable": "boolean",
  "errorCode": "string",
  "errorMessage": "string",
  "schemaVersion": "string",
  "success": "boolean",
}
`;

exports[`JSON envelope structure snapshots pools --json error envelope shape (ASP offline) 1`] = `
{
  "error.category": "string",
  "error.code": "string",
  "error.hint": "string",
  "error.message": "string",
  "error.retryable": "boolean",
  "errorCode": "string",
  "errorMessage": "string",
  "schemaVersion": "string",
  "success": "boolean",
}
`;

exports[`JSON envelope structure snapshots INPUT error envelope shape (stats pool without --asset) 1`] = `
{
  "error.category": "string",
  "error.code": "string",
  "error.hint": "string",
  "error.message": "string",
  "error.retryable": "boolean",
  "errorCode": "string",
  "errorMessage": "string",
  "schemaVersion": "string",
  "success": "boolean",
}
`;

exports[`JSON envelope structure snapshots accounts --json envelope shape (initialized, offline) 1`] = `
{
  "error.category": "string",
  "error.code": "string",
  "error.hint": "string",
  "error.message": "string",
  "error.retryable": "boolean",
  "errorCode": "string",
  "errorMessage": "string",
  "schemaVersion": "string",
  "success": "boolean",
}
`;

exports[`JSON envelope structure snapshots history --json envelope shape (initialized, offline) 1`] = `
{
  "error.category": "string",
  "error.code": "string",
  "error.hint": "string",
  "error.message": "string",
  "error.retryable": "boolean",
  "errorCode": "string",
  "errorMessage": "string",
  "schemaVersion": "string",
  "success": "boolean",
}
`;

exports[`JSON envelope structure snapshots init --json success envelope shape 1`] = `
{
  "defaultChain": "string",
  "nextActions": "array(1)",
  "schemaVersion": "string",
  "signerKeySet": "boolean",
  "success": "boolean",
}
`;
